# proximiti-server

./: .env  .env.nvim  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  clean_db_schema.sql  docker-compose.yml  garage.toml  noip
.sqls/: config.yml
migrations/: 20241120171333_create_schema.sql
proto/: auth_service.proto
sql/dev-initial/: 000-recreate-db.sql  001-create-schema.sql
src/: _.rs  config.rs  main.rs
src/api/: auth.rs  mod.rs
src/api/auth/: error.rs
src/api/authenticated_routes/: mod.rs
src/api/authenticated_routes/conversations/: error.rs  mod.rs
src/api/authenticated_routes/user/: error.rs  mod.rs
src/crypt/: mod.rs  pwd.rs  token.rs
src/ctx/: error.rs  mod.rs
src/middleware/: validation.rs
src/model/: error.rs  mod.rs
src/model/store/: error.rs  mod.rs
src/models/: mod.rs  sql.rs
src/services/: mod.rs
src/services/conversations/: error.rs  mod.rs
src/services/user/: error.rs  mod.rs
src/types/response/: mod.rs
src/utils/: extensions.rs
src/web/api/auth/: login.rs
