[package]
name = "proximiti-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.7.3", features = ["runtime-tokio", "postgres", "uuid"] }
tokio = { version = "1.35.1", features = ["full"] }
prost = "0.12.3"
tonic = "0.11.0"
tonic-reflection = "0.11.0"

[build-dependencies]
prost-build = "0.12.3"
tonic-build = "0.11.0"
walkdir = "2.5.0"
