[package]
name = "proximiti-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# for password only
argon2 = "0.5.3"
aws-config = "1.6.0"
aws-sdk-s3 = "1.79.0"
axum = { version = "0.8.1", features = ["macros"] }
axum-extra = { version = "0.10.0", default-features = false, features = ["typed-header"] }
base64 = "0.22.1"
blake3 = { version = "1.8.1", features = ["traits-preview"] }
dotenvy = "0.15.7"
hmac = "0.12.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.3", features = ["runtime-tokio", "postgres", "uuid"] }
thiserror = "2.0.12"
time = { version = "0.3.39", features = ["formatting", "serde"] }
tokio = { version = "1.44.1", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["cors"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.16.0", features = ["fast-rng", "v4"] }
wtransport = "0.6.0"
